[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "hello-wgpu",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.25"
async-std = "1.12.0"
